--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,24 +2,49 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-notoSansKR: var(--font-noto-sans-kr);
+@font-face {
+  font-family: "GWT";
+  src: url("/fonts/강원교육튼튼.otf") format("opentype");
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+:root {
+  --font-notoSansKR: var(--font-noto-sans-kr);
+
+  --white: #ffffff;
+  --black: #000000;
+
+  --blue-100: #6d7ee7;
+  --blue-200: #2b2744;
+
+  --gray-100: #e5e5e5;
+  --gray-200: #898989;
+
+  --yellow: #fffb96;
+
+  --background: var(--white);
+  --foreground: var(--black);
+
+  --primary: var(--blue-100);
+  --primary-foreground: var(--blue-200);
+
+  --text-secondary: var(--gray-200);
+  --text-background: var(--gray-100);
+
+  --highlight: var(--yellow);
+}
+
+.dark {
+  --background: var(--black);
+  --foreground: var(--white);
+
+  --text-background: var(--blue-200);
 }
 
 body {
-  background: var(--background);
+  background: var(--foreground);
   color: var(--foreground);
   font-family: var(--font-notoSansKR);
 }
