--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,7 +44,7 @@
 }
 
 body {
-  background: var(--foreground);
+  background: var(--background);
   color: var(--foreground);
   font-family: var(--font-notoSansKR);
 }
