--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,16 +13,16 @@
 :root {
   --font-notoSansKR: var(--font-noto-sans-kr);
 
-  --white: #ffffff;
-  --black: #000000;
+  --white: 0 0% 100%;
+  --black: 0 0% 0%;
 
-  --blue-100: #6d7ee7;
-  --blue-200: #2b2744;
+  --blue-100: 232 72% 67%;
+  --blue-200: 247 27% 21%;
 
-  --gray-100: #e5e5e5;
-  --gray-200: #898989;
+  --gray-100: 0 0% 90%;
+  --gray-200: 0 0% 54%;
 
-  --yellow: #fffb96;
+  --yellow: 58 100% 79%;
 
   --background: var(--white);
   --foreground: var(--black);
