--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,14 @@
   font-display: swap;
 }
 
+@font-face {
+  font-family: "GWS";
+  src: url("/fonts/GangwonEduSaeeum_OTFMediumA.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
 :root {
   --font-notoSansKR: var(--font-noto-sans-kr);
 
