--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -56,3 +56,31 @@ body {
   color: var(--foreground);
   font-family: var(--font-notoSansKR);
 }
+
+.button {
+  position: relative;
+  display: inline-block;
+  color: white;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.button::before {
+  content: "";
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: white;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+}
+
+.button:hover {
+  color: white;
+}
+
+.button:hover::before {
+  transform: scaleX(1);
+}
