FEAT: 테마 스위치 구현

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,6 +48,8 @@
   --background: var(--black);
   --foreground: var(--white);
 
+  --primary: var(--blue-200);
+
   --text-background: var(--blue-200);
 }
 
