--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,6 +66,11 @@ body {
     color 0.5s ease;
 }
 
+.vertical-text {
+  writing-mode: vertical-rl;
+  text-orientation: upright;
+}
+
 .button {
   position: relative;
   display: inline-block;
