FEAT: header에 섹션 이동 추가

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,6 +57,10 @@
   --highlight: var(--yellow);
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: hsl(var(--background));
   color: hsl(var(--foreground));
